@@ -18,6 +18,13 @@ html: |-
   	</tr>
   </table>
   <h3>A header after the table</h3>
+latex: |+
+  \begin{tabular}{ l l l }
+    a & b & c \\
+    1 & 2 & 3 \\
+  \end{tabular}
+  \subsubsection*{A header after the table}
+  
 ---
 in: |
   |_. a|_. b|_. c|
@@ -56,6 +63,11 @@ html: |-
   		<td>row</td>
   	</tr>
   </table>
+latex: |+
+  \begin{tabular}{ l l l l l }
+    This & is & a & simple & table \\
+    This & is & a & simple & row \\
+  \end{tabular}
 ---
 in: |-
   table{border:1px solid black}.
@@ -144,25 +156,82 @@ html: |-
   </table>
 ---
 in: |-
-  |{background:#ddd}. Cell with gray background|
+  |{background:#ddd}. Cell with gray background|Normal cell|
   |\2. Cell spanning 2 columns|
-  |/3. Cell spanning 3 rows|
-  |>. Right-aligned cell|
+  |/2. Cell spanning 2 rows|one|
+  |two|
+  |>. Right-aligned cell|<. Left-aligned cell|
 html: |-
   <table>
   	<tr>
   		<td style="background:#ddd;">Cell with gray background</td>
+  		<td>Normal cell</td>
   	</tr>
   	<tr>
   		<td colspan="2">Cell spanning 2 columns</td>
   	</tr>
   	<tr>
-  		<td rowspan="3">Cell spanning 3 rows</td>
+  		<td rowspan="2">Cell spanning 2 rows</td>
+  		<td>one</td>
+  	</tr>
+  	<tr>
+  		<td>two</td>
   	</tr>
   	<tr>
   		<td style="text-align:right;">Right-aligned cell</td>
+  		<td style="text-align:left;">Left-aligned cell</td>
   	</tr>
   </table>
+latex: |+
+  \begin{tabular}{ l l }
+    Cell with gray background & Normal cell \\
+    \multicolumn{2}{ l l }{Cell spanning 2 columns} \\
+    \multirow{2}{*}{Cell spanning 2 rows} & one \\
+     & two \\
+    Right-aligned cell & Left-aligned cell \\
+  \end{tabular}
+---
+name: row spanning mid-row
+in: |-
+  |1|2|3|
+  |1|/3. 2|3|
+  |1|3|
+  |1|3|
+  |1|2|3|
+html: |-
+  <table>
+  	<tr>
+  		<td>1</td>
+  		<td>2</td>
+  		<td>3</td>
+  	</tr>
+  	<tr>
+  		<td>1</td>
+  		<td rowspan="3">2</td>
+  		<td>3</td>
+  	</tr>
+  	<tr>
+  		<td>1</td>
+  		<td>3</td>
+  	</tr>
+  	<tr>
+  		<td>1</td>
+  		<td>3</td>
+  	</tr>
+  	<tr>
+  		<td>1</td>
+  		<td>2</td>
+  		<td>3</td>
+  	</tr>
+  </table>
+latex: |+
+  \begin{tabular}{ l l l }
+    1 & 2 & 3 \\
+    1 & \multirow{3}{*}{2} & 3 \\
+    1 &  & 3 \\
+    1 &  & 3 \\
+    1 & 2 & 3 \\
+  \end{tabular}
 ---
 in: |
   {background:#ddd}. |S|Target|Complete|App|Milestone|
